# linkedin-scrapper

./: main.py  pyproject.toml
linkedin/: __init__.py  constants.py  job_report.py  job_search.py
