[tool.poetry]
name = "linkedin-scrapper"
version = "0.1.0"
description = ""
authors = ["sadatyussuf <tommyleespartan0@gmail.com>"]
readme = "README.md"
packages = [{include = "linkedin_scrapper"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
